--- a/package.json
+++ b/package.json
@@ -1,28 +1,116 @@
 {
   "name": "blkpages",
   "version": "1.0.0",
-  "description": "BlkPages - Find Black-owned Businesses Near You",
+  "description": "BlkPages - Beauty booking platform with GDPR compliance and security features",
   "main": "index.html",
   "scripts": {
-    "build-css": "tailwindcss -i ./css/tailwind.css -o ./css/output.css --watch",
-    "build-css-prod": "tailwindcss -i ./css/tailwind.css -o ./css/output.css --minify",
-    "dev": "tailwindcss -i ./css/tailwind.css -o ./css/output.css --watch",
-    "build": "tailwindcss -i ./css/tailwind.css -o ./css/output.css --minify"
+    "start": "python -m http.server 8080",
+    "dev": "python -m http.server 3000",
+    "test": "node tests/automated-testing.js",
+    "test:staging": "NODE_ENV=staging node tests/automated-testing.js",
+    "test:production": "NODE_ENV=production node tests/automated-testing.js",
+    "build": "node scripts/build.js",
+    "deploy:staging": "NODE_ENV=staging node scripts/deploy.js",
+    "deploy:production": "NODE_ENV=production node scripts/deploy.js",
+    "verify:staging": "node scripts/verify.js --env=staging",
+    "verify:production": "node scripts/verify.js --env=production",
+    "security:scan": "node scripts/security-scan.js",
+    "gdpr:audit": "node scripts/gdpr-audit.js",
+    "performance:test": "node scripts/performance-test.js",
+    "accessibility:test": "node scripts/accessibility-test.js",
+    "backup": "node scripts/backup.js",
+    "restore": "node scripts/restore.js",
+    "monitor": "node scripts/monitor.js",
+    "lint": "node scripts/lint.js",
+    "format": "node scripts/format.js",
+    "docs": "node scripts/generate-docs.js"
   },
   "keywords": [
-    "black-owned",
-    "business",
-    "directory",
+    "beauty",
     "booking",
-    "loyalty"
+    "gdpr",
+    "security",
+    "authentication",
+    "privacy",
+    "compliance"
   ],
-  "author": "BlkPages",
+  "author": "BlkPages Team",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/blkpages/blkpages.git"
+  },
+  "bugs": {
+    "url": "https://github.com/blkpages/blkpages/issues"
+  },
+  "homepage": "https://blkpages.co.uk",
+  "engines": {
+    "node": ">=14.0.0",
+    "npm": ">=6.0.0"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "helmet": "^7.0.0",
+    "cors": "^2.8.5",
+    "bcrypt": "^5.1.0",
+    "jsonwebtoken": "^9.0.0",
+    "nodemailer": "^6.9.0",
+    "stripe": "^12.0.0",
+    "pg": "^8.11.0",
+    "redis": "^4.6.0",
+    "winston": "^3.8.0",
+    "joi": "^17.9.0",
+    "rate-limiter-flexible": "^3.0.0",
+    "express-rate-limit": "^6.8.0",
+    "express-validator": "^7.0.0",
+    "compression": "^1.7.4",
+    "morgan": "^1.10.0"
+  },
   "devDependencies": {
-    "tailwindcss": "^3.4.0",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32"
+    "jest": "^29.5.0",
+    "supertest": "^6.3.0",
+    "puppeteer": "^19.8.0",
+    "lighthouse": "^10.2.0",
+    "eslint": "^8.42.0",
+    "prettier": "^2.8.8",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.0",
+    "nodemon": "^2.0.22",
+    "concurrently": "^8.2.0"
+  },
+  "lint-staged": {
+    "*.{js,html,css}": [
+      "eslint --fix",
+      "prettier --write"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "pre-push": "npm test"
+    }
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "collectCoverage": true,
+    "coverageDirectory": "coverage",
+    "coverageReporters": ["text", "lcov", "html"]
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead"
+  ],
+  "config": {
+    "staging": {
+      "baseUrl": "https://staging.blkpages.co.uk",
+      "apiUrl": "https://staging-api.blkpages.co.uk",
+      "database": "blkpages_staging"
+    },
+    "production": {
+      "baseUrl": "https://blkpages.co.uk",
+      "apiUrl": "https://api.blkpages.co.uk",
+      "database": "blkpages_production"
+    }
   }
 }
-
-
