--- a/package.json
+++ b/package.json
@@ -1,36 +1,22 @@
 {
-  "name": "blkpages-bookings-server",
+  "name": "blkpages-business-profiles",
   "version": "1.0.0",
-  "description": "BlkPages Business Bookings Dashboard with Google Calendar sync and email notifications",
-  "main": "server.js",
+  "description": "Business profile system with dashboard sync",
+  "main": "server-config.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node server-config.js",
+    "dev": "node server-config.js",
+    "test": "echo \"Open business-router.html in browser to test routes\""
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "mongodb": "^6.0.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "googleapis": "^126.0.1",
-    "nodemailer": "^6.9.4",
-    "node-cron": "^3.0.2",
-    "multer": "^1.4.5-lts.1",
-    "sharp": "^0.32.6",
-    "mime-types": "^2.1.35",
-    "jsonwebtoken": "^9.0.2",
-    "ejs": "^3.1.9"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
+    "express": "^4.18.2"
   },
   "keywords": [
-    "bookings",
-    "calendar",
-    "email",
-    "notifications",
-    "blkpages"
+    "business",
+    "profiles",
+    "dashboard",
+    "sync"
   ],
-  "author": "BlkPages",
+  "author": "BLKPAGES",
   "license": "MIT"
 }
