--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "sharp": "^0.32.6",
     "mime-types": "^2.1.35",
     "jsonwebtoken": "^9.0.2",
-    "ejs": "^3.1.9"
+    "ejs": "^3.1.9",
+    "socket.io": "^4.7.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
