updated profile page

--- a/package.json
+++ b/package.json
@@ -6,10 +6,18 @@
   "scripts": {
     "start": "node server-config.js",
     "dev": "node server-config.js",
+    "build": "node build-production.js",
+    "build-css": "tailwindcss -i ./css/input.css -o ./css/output.css --watch",
+    "build-css-prod": "tailwindcss -i ./css/input.css -o ./css/output.css --minify",
     "test": "echo \"Open business-router.html in browser to test routes\""
   },
   "dependencies": {
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.0",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32"
   },
   "keywords": [
     "business",
