--- a/env.example
+++ b/env.example
@@ -1,4 +1,4 @@
-# BlkPages Analytics Environment Variables
+# BlkPages Environment Variables
 # Copy this file to .env and update the values
 
 # MongoDB Connection String
@@ -9,3 +9,10 @@ PORT=5000
 
 # API Base URL for frontend (optional, for different deployment origins)
 # REACT_APP_API_BASE_URL=http://localhost:5000
+
+# Stripe Configuration
+STRIPE_SECRET_KEY=sk_live_XXXXXXXXXXXXX
+
+# Email Configuration (Gmail SMTP)
+SMTP_USER=youremail@gmail.com
+SMTP_PASS=yourpassword
