--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "mime-types": "^2.1.35",
     "jsonwebtoken": "^9.0.2",
     "ejs": "^3.1.9",
-    "socket.io": "^4.7.2"
+    "socket.io": "^4.7.2",
+    "stripe": "^14.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
