--- a/backend/package.json
+++ b/backend/package.json
@@ -1,31 +1,35 @@
 {
-  "name": "blkpages-booking-api",
+  "name": "blkpages-backend",
   "version": "1.0.0",
-  "description": "Booking link generation and WhatsApp integration API",
-  "main": "booking-api.js",
+  "description": "BlkPages Backend API with Socket.IO real-time updates",
+  "main": "server.js",
+  "type": "module",
   "scripts": {
-    "start": "node booking-api.js",
-    "dev": "nodemon booking-api.js",
-    "test": "jest"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "twilio": "^4.19.0",
     "cors": "^2.8.5",
-    "express-rate-limit": "^7.1.5",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "body-parser": "^1.20.2",
+    "pg": "^8.11.3",
+    "stripe": "^14.0.0",
+    "socket.io": "^4.7.2",
+    "nodemailer": "^6.9.4"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2",
-    "jest": "^29.7.0"
+    "nodemon": "^3.0.1"
   },
   "keywords": [
-    "booking",
-    "whatsapp",
-    "twilio",
-    "api"
+    "blkpages",
+    "api",
+    "socket.io",
+    "real-time",
+    "bookings",
+    "loyalty"
   ],
   "author": "BlkPages",
   "license": "MIT"
 }
-
