--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,9 @@
     "pg": "^8.11.3",
     "stripe": "^14.0.0",
     "socket.io": "^4.7.2",
-    "nodemailer": "^6.9.4"
+    "nodemailer": "^6.9.4",
+    "node-cron": "^3.0.3",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
