--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,9 @@
     "socket.io": "^4.7.2",
     "nodemailer": "^6.9.4",
     "node-cron": "^3.0.3",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "jsonwebtoken": "^9.0.2",
+    "nanoid": "^5.0.4"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
