--- a/package.json
+++ b/package.json
@@ -1,38 +1,65 @@
 {
-  "name": "blkpages-bookings-server",
+  "name": "blkpages-loyalty-system",
   "version": "1.0.0",
-  "description": "BlkPages Business Bookings Dashboard with Google Calendar sync and email notifications",
-  "main": "server.js",
+  "description": "Complete BlkPages loyalty system with mobile verification and redemption caps",
+  "main": "loyalty-system-setup.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
-  },
-  "dependencies": {
-    "express": "^4.18.2",
-    "mongodb": "^6.0.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "googleapis": "^126.0.1",
-    "nodemailer": "^6.9.4",
-    "node-cron": "^3.0.2",
-    "multer": "^1.4.5-lts.1",
-    "sharp": "^0.32.6",
-    "mime-types": "^2.1.35",
-    "jsonwebtoken": "^9.0.2",
-    "ejs": "^3.1.9",
-    "socket.io": "^4.7.2",
-    "stripe": "^14.0.0"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
+    "start": "node loyalty-system-setup.js",
+    "dev": "nodemon loyalty-system-setup.js",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "db:setup": "mysql -u username -p database_name < blkpoints-database-setup.sql",
+    "db:seed": "node scripts/seed-database.js",
+    "engine:run": "node -e \"require('./loyalty-engine').runLoyaltyEngineManually(require('./mock-db'))\"",
+    "engine:test": "node -e \"require('./loyalty-engine').testNotificationSystem(require('./mock-db'), 'user-123')\""
   },
   "keywords": [
-    "bookings",
-    "calendar",
-    "email",
-    "notifications",
-    "blkpages"
+    "loyalty",
+    "points",
+    "mobile-verification",
+    "redemption-cap",
+    "blkpages",
+    "beauty",
+    "wellness",
+    "booking"
   ],
-  "author": "BlkPages",
-  "license": "MIT"
+  "author": "BlkPages Team",
+  "license": "MIT",
+  "dependencies": {
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "helmet": "^7.1.0",
+    "express-rate-limit": "^7.1.5",
+    "node-cron": "^3.0.3",
+    "jsonwebtoken": "^9.0.2",
+    "bcrypt": "^5.1.1",
+    "crypto": "^1.0.1",
+    "handlebars": "^4.7.8",
+    "nodemailer": "^6.9.7",
+    "socket.io": "^4.7.4"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.3",
+    "eslint": "^8.55.0",
+    "autocannon": "^7.12.0",
+    "winston": "^3.11.0",
+    "prom-client": "^15.1.0"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/blkpages/loyalty-system.git"
+  },
+  "bugs": {
+    "url": "https://github.com/blkpages/loyalty-system/issues"
+  },
+  "homepage": "https://github.com/blkpages/loyalty-system#readme"
 }
