--- a/firebase-functions/package.json
+++ b/firebase-functions/package.json
@@ -15,7 +15,9 @@
   "dependencies": {
     "firebase-admin": "^12.0.0",
     "firebase-functions": "^4.8.0",
-    "stripe": "^14.21.0"
+    "stripe": "^14.21.0",
+    "nodemailer": "^6.9.9",
+    "json2csv": "^6.0.0"
   },
   "devDependencies": {
     "firebase-functions-test": "^3.1.0"
